# airbnb_predict

./: .coveragerc  .gitignore  .gitignore.swp  .isort.cfg  CONTRIBUTING.rst  Dockerfile  README.md  config.py  environment.yml  pyproject.toml  setup.cfg  setup.py
.ipynb_checkpoints/: ciclo01-checkpoint.ipynb
Notebooks/: ciclo01.ipynb  ciclo02_imbalanced_metrics.ipynb
code/Notebooks/: ciclo03_cross_validation.ipynb  ciclo04_feature_engineering.ipynb
code/scripts/: train_model.py
code/tests/: conftest.py
docs/: conf.py  index.md  readme.md
notebooks/: ciclo01.ipynb  ciclo02_imbalanced_metrics.ipynb  ciclo03_cross_validation.ipynb  ciclo04_feature_engineering.ipynb
