[tool.poetry]
name = "airbnb prediction"
version = "0.1"
description = "Esse projeto visa construir um algoritmo que seja capaz de predizer o primeiro destino que o usuário irá escolher no Airbnb."
authors = ["Kaisson Ferreira <kaysson_17@hotmail.com>"]

[tool.poetry.dependencies]
python = "3.9.8"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
